[gd_scene load_steps=5 format=3 uid="uid://hu855tqcl8g5"]

[ext_resource type="Texture2D" uid="uid://too4diwkiygs" path="res://images/11.png" id="1_wv1eu"]
[ext_resource type="Script" path="res://scenes/level_button.gd" id="2_1vbjk"]
[ext_resource type="PackedScene" uid="uid://by78ksvkjfr0g" path="res://scenes/level.tscn" id="2_t64c6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_byxyt"]
atlas = ExtResource("1_wv1eu")
region = Rect2(256, 192, 64, 32)

[node name="LevelButton" type="TextureButton"]
custom_minimum_size = Vector2(0, 200)
offset_top = -40.0
offset_right = 360.0
offset_bottom = 200.0
texture_normal = SubResource("AtlasTexture_byxyt")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_1vbjk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 0
offset_top = 69.0
offset_right = 353.0
offset_bottom = 146.0
theme_override_constants/separation = -8

[node name="LabelName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
horizontal_alignment = 1
justification_flags = 0
ellipsis_char = ""

[node name="LabelDuree" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
horizontal_alignment = 1
justification_flags = 0

[node name="LabelTaille" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
horizontal_alignment = 1
justification_flags = 0

[node name="Level" parent="." instance=ExtResource("2_t64c6")]

[connection signal="pressed" from="." to="." method="_on_pressed"]
